feat: Agrega la seccion de contacto

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <body>
     <h1>Hola Mundo</h1>
     <p>Este es mi primer proyecto con Git</p>
+
+    <h2>Contacto</h2>
+    <p>Si deseas ponerte en contacto conmigo, puedes enviarme un correo a: ejemplo@correo.com</p>
+    <p>También puedes seguirme en mis redes sociales:</p>
+    <ul>
+        <li>Twitter: @ejemplo</li>
+        <li>LinkedIn: ejemplo</li>
+    </ul>
 </body>
 </html>
